[package]
name = "pleme-inner-derive"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Newtype derive proc-macro emitted from a tatara-rust-derive NewtypeDeriveSpec."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
